Update registry link to PoppyList

--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
          * change the URL to your preferred baby registry or list aggregator.
          */
         function handleRegistry() {
-            const url = 'https://linktr.ee/babyshower4diamond';
+            // Update the registry URL to point directly to the PoppyList registry.
+            // Using PoppyList provides a simple, single destination for all gift ideas.
+            const url = 'https://poppylist.com/registries/28068';
             window.open(url, '_blank');
         }
 
