Add registries section and placeholders for Target, Amazon, Walmart, and Deals Hub

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <p>Location: TBD</p>
             </div>
         </div>
+
     </header>
 
     <!-- Main content -->
@@ -124,6 +125,47 @@
                         Share Now
                     </button>
                 </div>
+            </div>
+        </div>
+
+        <!-- Registries Section -->
+        <div class="bg-white rounded-2xl p-8 shadow-lg mb-12 border-2 border-soft-purple">
+            <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Registries</h2>
+            <p class="text-gray-600 mb-8 text-center">Explore our gift lists across your favorite stores.</p>
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <!-- PoppyList Registry -->
+                <div class="border rounded-2xl p-6 flex flex-col items-center justify-between hover:shadow-lg transition">
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">PoppyList</h3>
+                    <p class="text-gray-600 mb-4 text-center">Our main registry with curated picks.</p>
+                    <a href="https://poppylist.com/registries/28068" target="_blank" class="bg-warm-purple hover:bg-purple-400 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">View Registry</a>
+                </div>
+                <!-- Target Registry -->
+                <div class="border rounded-2xl p-6 flex flex-col items-center justify-between hover:shadow-lg transition">
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Target</h3>
+                    <p class="text-gray-600 mb-4 text-center">Find more baby essentials.</p>
+                    <!-- TODO: Replace '#' with the actual Target registry link when available -->
+                    <a href="#" target="_blank" class="bg-warm-yellow hover:bg-yellow-400 text-gray-800 font-semibold py-2 px-6 rounded-full transition-colors duration-300">View Registry</a>
+                </div>
+                <!-- Amazon Registry -->
+                <div class="border rounded-2xl p-6 flex flex-col items-center justify-between hover:shadow-lg transition">
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Amazon</h3>
+                    <p class="text-gray-600 mb-4 text-center">A wide range of baby items.</p>
+                    <!-- TODO: Replace '#' with the actual Amazon registry link when available -->
+                    <a href="#" target="_blank" class="bg-warm-purple hover:bg-purple-400 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">View Registry</a>
+                </div>
+                <!-- Walmart Registry -->
+                <div class="border rounded-2xl p-6 flex flex-col items-center justify-between hover:shadow-lg transition">
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Walmart</h3>
+                    <p class="text-gray-600 mb-4 text-center">Great deals and value.</p>
+                    <!-- TODO: Replace '#' with the actual Walmart registry link when available -->
+                    <a href="#" target="_blank" class="bg-warm-yellow hover:bg-yellow-400 text-gray-800 font-semibold py-2 px-6 rounded-full transition-colors duration-300">View Registry</a>
+                </div>
+            </div>
+            <!-- Notion Deals Hub -->
+            <div class="mt-8 text-center">
+                <p class="text-gray-600 mb-2">Looking for more deals and recommendations?</p>
+                <!-- TODO: Replace '#' with the actual Notion Deals Hub URL when available -->
+                <a href="#" target="_blank" class="text-warm-purple hover:underline font-medium">Deals Hub (Notion)</a>
             </div>
         </div>
 
